@@ -546,6 +546,10 @@ if ( ! function_exists( 'bhg_get_default_translations' ) ) {
 			'date'                                         => 'Date',
 			'default_tournament_period'                    => 'Default Tournament Period',
 			'default_period_for_tournament_calculations'   => 'Default period for tournament calculations.',
+			'default_prize_layout'                         => 'Default Prize Layout',
+			'default_prize_layout_description'             => 'Choose how prizes display on active hunts and shortcodes when no design is specified.',
+			'default_prize_size'                           => 'Default Prize Card Size',
+			'default_prize_size_description'               => 'Controls the image size used for prize cards when no shortcode override is provided.',
 			'delete_this_ad'                               => 'Delete this ad?',
 			'delete_this_affiliate'                        => 'Delete this affiliate website?',
 			'delete_this_guess'                            => 'Delete this guess?',
@@ -605,6 +609,11 @@ if ( ! function_exists( 'bhg_get_default_translations' ) ) {
 			'minimum_guess_amount'                         => 'Minimum Guess Amount',
 			'min_guess_amount'                             => 'Minimum Guess Amount',
 			'minimum_amount_users_can_guess_for_a_bonus_hunt' => 'Minimum amount users can guess for a bonus hunt.',
+			'layout_grid'                                  => 'Grid',
+			'layout_carousel'                              => 'Carousel',
+			'size_small'                                   => 'Small',
+			'size_medium'                                  => 'Medium',
+			'size_big'                                     => 'Big',
 			'missing'                                      => 'Missing',
 			'missing_helper_functions_please_include_classbhgbonushuntshelpersphp' => 'Missing helper functions. Please include class-bhg-bonus-hunts-helpers.php.',
 			'missing_hunt_id'                              => 'Missing hunt id',
